Fixat previewbild/popup när bild sparas
Fixat previewbild på annonsformuläret & popup när bild sparas. Bilden
måste dock tas på "bredden" för att den alltid visas så på previewen.

--- a/MenuFragment/app/src/main/AndroidManifest.xml
+++ b/MenuFragment/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.magnus.menufragment">
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
@@ -22,5 +20,9 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
