--- a/MenuFragment/app/src/main/AndroidManifest.xml
+++ b/MenuFragment/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
