--- a/MenuFragment/app/src/main/AndroidManifest.xml
+++ b/MenuFragment/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
